// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages should add data to the tree 1`] = `
Object {
  "bot-output": Object {
    "!test": Object {
      "": Array [
        Object {
          "ioc": Object {},
          "options": Object {
            "channelNames": Array [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
      ],
    },
  },
  "channel": Object {},
}
`;

exports[`Messages should add data to the tree 2`] = `
Object {
  "bot-output": Object {
    "!test": Object {
      "": Array [
        Object {
          "ioc": Object {},
          "options": Object {
            "channelNames": Array [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
        Object {
          "ioc": Object {},
          "options": Object {
            "allowedRoles": Array [
              "Support",
            ],
            "channelNames": Array [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
      ],
    },
  },
  "channel": Object {},
}
`;

exports[`Messages should add data to the tree 3`] = `
Object {
  "bot-development": Object {
    "!othertrigger": Object {
      "": Array [
        Object {
          "ioc": Object {},
          "options": Object {
            "allowedRoles": Array [
              "Developer",
            ],
            "channelNames": Array [
              "bot-development",
              "bot-test-channel",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!otherTrigger",
          },
        },
      ],
    },
  },
  "bot-output": Object {
    "!test": Object {
      "": Array [
        Object {
          "ioc": Object {},
          "options": Object {
            "channelNames": Array [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
        Object {
          "ioc": Object {},
          "options": Object {
            "allowedRoles": Array [
              "Support",
            ],
            "channelNames": Array [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
      ],
    },
  },
  "bot-test-channel": Object {
    "!othertrigger": Object {
      "": Array [
        Object {
          "ioc": Object {},
          "options": Object {
            "allowedRoles": Array [
              "Developer",
            ],
            "channelNames": Array [
              "bot-development",
              "bot-test-channel",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!otherTrigger",
          },
        },
      ],
    },
  },
  "channel": Object {},
}
`;

exports[`Messages should extract messages from direct message 1`] = `
Array [
  Object {
    "handlerKeys": Array [
      "9007199254740991",
      "this",
      "is",
    ],
    "isDirectMessage": true,
    "member": Object {
      "avatar": null,
      "avatarURL": null,
      "communicationDisabledUntilTimestamp": null,
      "displayAvatarURL": "https://cdn.discordapp.com/avatars/9007199254740991/user avatar url.webp",
      "displayName": "nick",
      "guildId": "9007199254740991",
      "joinedTimestamp": NaN,
      "nickname": "nick",
      "pending": false,
      "premiumSinceTimestamp": null,
      "userId": "9007199254740991",
    },
  },
]
`;

exports[`Messages should extract messages from public channel 1`] = `
Array [
  Object {
    "handlerKeys": Array [
      "9007199254740991",
      "this",
      "is",
    ],
    "isDirectMessage": false,
    "member": Object {
      "avatar": null,
      "avatarURL": null,
      "communicationDisabledUntilTimestamp": null,
      "displayAvatarURL": "https://cdn.discordapp.com/avatars/9007199254740991/user avatar url.webp",
      "displayName": "nick",
      "guildId": "9007199254740991",
      "joinedTimestamp": NaN,
      "nickname": "nick",
      "pending": false,
      "premiumSinceTimestamp": null,
      "userId": "9007199254740991",
    },
  },
]
`;
